-Adding functionality    - Can now authorize voters in the front-end    - Can now add candidates from front-end (Required voter is authorized)

--- a/src/css/styling.css
+++ b/src/css/styling.css
@@ -2,7 +2,7 @@ body {
 
 
 }
- .maincard{
+ .maincard, #authVoter{
      margin: auto;
      width: 50%;
      margin-top: 5%;
@@ -39,3 +39,14 @@ body {
     100% { transform: rotate(360deg); }
 }
 
+/*@media screen and (max-width: 570px) {
+    #inputId{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 385px) {
+    #authButton {
+        width: 100%;
+    }
+}*/
