-Adding functionality    - Can now authorize voters in the front-end    - Can now add candidates from front-end (Required voter is authorized)

--- a/src/css/styling.css
+++ b/src/css/styling.css
@@ -2,7 +2,7 @@ body {
 
 
 }
- .maincard, #authVoter{
+ .maincard, #authVoter #newCandidateContainer{
      margin: auto;
      width: 50%;
      margin-top: 5%;
